--- a/styles.css
+++ b/styles.css
@@ -1,203 +1,213 @@
+
 body {
-margin: 0;
-
-}
-html {
-    width: fit-content;
-}
-h1 {
-  background: rgb(59, 58, 58);
-  color:white;  
-  text-align: center;
-  font-size: 22px  ;
-  padding: 30px;
-  margin: auto;
-}
-h2 {
-   text-align: center; 
-}
-.h-2 {
-    text-align: left;
-}
-.header2 {
-
-    text-align: left;
-}
-input:focus {
-    background: grey;
-    color: white;
-}   
-
-p {
-    text-align: center;
-    font-size: 16px;
-    margin: 0 20px 0 20px;
-    color: rgb(148, 144, 144);
-}
-
-label {
-    color: rgb(145, 141, 141);
-   }
-
-.textcolor{
-color: lightgray;
-
-}
-.underline {
-border-bottom: 6px double;
-padding: 0 0 10px 0; 
-margin: 20px;
-}
-  
-.leftmar {
-    text-align: left;
-    padding: 2rem;
-    background: peachpuff;
-}
-
-.left {
+    margin: 0;
+    font-family:'Montserrat', sans-serif;
+    
+    }
+    h1 {
+        background: rgb(59, 58, 58);
+        color:white;  
+        text-align: center;
+        font-size: 1.2em  ;
+        padding: 1.5em;
+        margin: auto;
+    }
+    h2 {
+       text-align: center; 
+    }
+    .h-2 {
+        text-align: left;
+        font-size: x-large;
+        margin-bottom: 17px  ;
+    }
+    .pcenter{
+        text-align: center;
+    }
+    .header2 {
+    
+        text-align: left;
+    }
+    input:focus {
+        outline-color: rgb(65, 206, 65);
+    }  
+    legend {
+        padding-bottom: 16px;
+        font-size: x-large;
+    } 
+    
+    input#zip{
+        width: 33%;
+        display: flex;
+    }
+    p {
+        font-size: 16px;
+        color: rgb(148, 144, 144);
+    }
+    label {
+        color: rgb(145, 141, 141);
+       }
+    
+    .textcolor{
+        color: lightgray;
+    
+    }
+    .underline {
+        border-bottom: 6px double;
+        padding: 0 0 1rem 0; 
+        margin: 1.2rem;
+        }
+          
+        .leftmar {
+            text-align: left;
+            padding: 2rem;
+            background: peachpuff;
+        }
+        input#zip {
+             width: 33%;
+        }
+    
+    .left {
         text-align: left;
         padding: 10px;
-        margin: 21px -10px;
-   }
-
-.input1 {
-width: 360px;
-height: 46px;
-background: rgb(236, 235, 235);
-border-radius: 8px;
-border: none;
-margin: 8px 0 14px 0
-}
-.news-1 {
-    padding: 2rem;
-    background: peachpuff;
-}
-
-option[default] {
-    display: none;
-
-}
-select {
-    color: grey;
-  }
-  option {
-    color: black;
-  }
-  option[default] {
-     display: none;
-  }
-
-.input3 {
-    margin: 8px 0 14px 0;
-}
-
-::placeholder {
-    text-align: right;
-    color: rgb(202, 192, 192);
-
-}
-
-select {
-    width: 220px;
-height: 35px;
-}
-
-fieldset {
-
-    border: none;
-}
-textarea {
-    width: 360px;
-    height: 100px;
-    background: rgb(236, 235, 235);;
-    border: none;
-  }
-
-  .submitb {
-     background: rgb(60, 194, 165); 
-     width: 360px;
-    height: 65px;
-    border-radius: 8px;
-    color: white;
-    font-size: large;
-    margin: 20px 0;
-    border: none;
-}
-
+        margin: 9px -10px;
+       }
     
- @media screen and (min-width: 768px) {
-   fieldset { 
-    width: 50vw;
-    margin: auto;
-   }
-
-   label {
-    display: inline-block;
-    width: 110px;}
-    
-    textarea {
-        width: 500px;
-        margin-top: 10px
+       .input1 {
+        width: 100%;
+        height: 3em ;
+        background: rgb(236, 235, 235);
+        border-radius: 10px;
+        border: none;
+        margin: 15px 0 14px 0;
     }
-    .leftmar {
-        text-align: left;
+    .news-1 {
+        padding: 2rem;
         background: peachpuff;
-        padding: 44p;
     }
+    
+    
+    option[default] {
+        display: none;
+    
+    }
+    select {
+        color: grey;
+      }
+      option {
+        color: black;
+      }
+      option[default] {
+         display: none;
+      }
+    
+    .input3 {
+        margin: 14px 24px 21px 0px;
+    }
+    
+    ::placeholder {
+        text-align: right;
+        color: rgb(202, 192, 192);
+    
+    }
+    
+    select {
+        width: 220px;
+        height: 35px;
+    }
+    
+    fieldset {
+    
+        border: none;
+    }
+    textarea {
+        width: 100%;
+        height: 8em;
+        background: rgb(236, 235, 235);
+        border: none;
+        margin-top: 1em;
+    }
+    
+    .submitb {
+        background: rgb(60, 194, 165);
+        width: 100%;
+        height: 3em;
+        border-radius: 8px;
+        color: white;
+        font-size: large;
+        margin: 20px 0;
+        border: none;
+        transition: background-color 0.5s ease-out;
+    }  
+        .submitb:hover {
+            background-color: rgb(121, 218, 129);
+          }
+     
+        hr {
+            max-width: 739px;
+            height: 3px;
+            background-color: black;
+            background-repeat: inherit;
+        }
+    
+        .foot {
+                text-align: center;
+    }
+    
         
-        .left {
-             
-                text-align: left;
-                padding: 10px;
-                margin: 21px -10px;  
-           }
-
-        .submitb {
-        
-            width: 500px;
-          }             
-            
-          .news {
-            text-align: left;
-            padding: 100px ;
+     @media screen and (min-width: 768px) {
+      
+       .contact-info {
+            width: 39%;
+            margin: auto;
+            min-width: 740px ;
+            flex-flow: row wrap;
+        }
+    
+        .news-1 {
+            width: 39%;
+            margin: auto;
+            max-width: 740px;
             background: peachpuff;
-            margin:20px;
-          } 
-            
-     #zip {
-     width: 170px
-     }
-     
+            padding: 2rem;
+            min-width: 679px;
+            }
        .submitb {
-     
-         width: 500px;
-       }             
-         
-      .h-2{
-       text-align:left
-      }  
-      
-      .flex {
-    display: flex;
-    flex-direction: row;
-   }
-
-   .inline{
-       display: flex;
-       flex-direction: row;
-   }
-        
-   .info {
-    display: flex;
-    flex-direction: row;
-}
-
-            
- 
-   
-      
+            background: rgb(60, 194, 165);
+            width: 100%;
+            height: 86px;
+            border-radius: 8px;
+            color: white;
+            font-size: large;
+            margin: 20px 0;
+            border: none;
+       }
+       .input1 {
+            width: 79%;
+            height: 3em;
+            background: rgb(236, 235, 235);
+            border-radius: 10px;
+            border: none;
+            margin: 30px 0 14px 0;
+       }
     
+       .infotop{
+           display: flex;
+       }
     
-}      
-    
+       label {
+            width: 11em;
+       }
+       input#zip {
+            width: 25%;
+            padding: 0 0 0 0px;
+            margin: 23px 27em 0 0px;
+       }
+        div.info {
+            margin: 0 0 0 0em;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: baseline;
+            width: 43em;
+        }
+    }
